# Parcoach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.py  config.py  fly.toml  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: DECISIONS.md  DESIGN_SYSTEM.md  PITCH_AND_MARKET_REALITY.md  PRD.md  RESEARCH_FOUNDATION.md  TECH_SPEC.md
knowledge/: coparenting_kb.md
memory/: store.py  summarize.py
prompts/: system_prompt.py
public/content/everyday/: pack.json
safety/: guardrails.py
scripts/: generate-content.mjs  generate-icons.mjs
src/: index.css
src/app/: App.tsx
src/child/: Bridge.tsx  ParentPrompt.tsx  PlaySession.tsx  Stage.tsx
src/content/: loader.ts  types.ts  validate.ts
src/design/: primitives.tsx  tokens.ts
src/engine/: audioManager.ts  progress.ts  settings.ts  useSession.ts
src/lib/: recordingsDb.ts  useReducedMotion.ts
src/parent/: Dashboard.tsx  Home.tsx  Settings.tsx  VoiceStudio.tsx  useRecorder.ts
tests/: coreLoop.test.tsx  progress.test.ts  settings.test.ts  setup.ts  test_guardrails.py  test_store.py  test_summarize.py  test_system_prompt.py  validate.test.ts
