[project]
name = "parcoach"
version = "0.1.0"
description = "A phone-first co-parenting voice coach (LiveKit + Claude)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# agent.py touches LiveKit APIs whose exact signatures vary by version; don't fail lint on
# unused args in framework hooks.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
